feat(SPV-894): add temporary repository for getting image

--- a/.github/workflows/regression-tests.yaml
+++ b/.github/workflows/regression-tests.yaml
@@ -42,6 +42,8 @@ jobs:
             --grpc-web \
             --helm-set global.domainName=${DOMAIN_NAME} \
             --helm-set spv-wallet-stack.spv-wallet.image.tag=${{ env.IMAGE_TAG }}
+            # temporary values for testing
+            --helm-set spv-wallet-stack.spv-wallet.image.repository=wregulski/spv-wallet
         shell: bash
 
       - name: Deploy Postgres Instance
@@ -58,6 +60,8 @@ jobs:
             --grpc-web \
             --helm-set global.domainName=${DOMAIN_NAME} \
             --helm-set spv-wallet-stack.spv-wallet.image.tag=${{ env.IMAGE_TAG }}
+            # temporary values for testing
+            --helm-set spv-wallet-stack.spv-wallet.image.repository=wregulski/spv-wallet
         shell: bash
 
       - name: Wait for Applications to be Healthy
