--- a/.github/workflows/regression-tests.yaml
+++ b/.github/workflows/regression-tests.yaml
@@ -15,6 +15,8 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install ArgoCD CLI
+        # maybe we should download concrete version
+        # and what's more, maybe it's good idea to cache it with actions/cache https://github.com/actions/cache (but this can be done is a separate step)
         run: |
           curl -sLO https://github.com/argoproj/argo-cd/releases/latest/download/argocd-linux-amd64
           chmod +x argocd-linux-amd64
@@ -41,7 +43,8 @@ jobs:
             --upsert \
             --grpc-web \
             --helm-set global.domainName=${DOMAIN_NAME} \
-            --helm-set spv-wallet-stack.spv-wallet.image.tag=${{ env.IMAGE_TAG }} \
+            --helm-set spv-wallet-stack.spv-wallet.image.tag=${{ env.IMAGE_TAG }}
+            # temporary values for testing
             --helm-set spv-wallet-stack.spv-wallet.image.repository=wregulski/spv-wallet
         shell: bash
 
@@ -58,7 +61,8 @@ jobs:
             --upsert \
             --grpc-web \
             --helm-set global.domainName=${DOMAIN_NAME} \
-            --helm-set spv-wallet-stack.spv-wallet.image.tag=${{ env.IMAGE_TAG }} \
+            --helm-set spv-wallet-stack.spv-wallet.image.tag=${{ env.IMAGE_TAG }}
+            # temporary values for testing
             --helm-set spv-wallet-stack.spv-wallet.image.repository=wregulski/spv-wallet
         shell: bash
 
@@ -85,41 +89,44 @@ jobs:
           done
         shell: bash
 
-      - name: Install Go
-        run: |
-          wget https://golang.org/dl/go1.22.5.linux-amd64.tar.gz
-          sudo tar -C /usr/local -xzf go1.22.5.linux-amd64.tar.gz
-          export PATH=$PATH:/usr/local/go/bin
-        shell: bash
-
+      # I would consider making running operator and tests a separate job (just a standard job, not reusable job)
       - name: Run Operator
         id: run_operator
+        # Hmm.... why we actually, currently have operator in the spv-wallet repository, as it would be better to have it here
         run: |
-          export PATH=$PATH:/usr/local/go/bin
           go run operator.go test-${TEST_ID}-sqlite.dev.4chain.space test-${TEST_ID}-postgres.dev.4chain.space
         shell: bash
 
-      - name: Install Task
-        run: |
-          sudo sh -c "$(curl --location https://taskfile.dev/install.sh)" -- -d -b /usr/local/bin
-        shell: bash
-
+      # something to consider - should we run go and js tests one by one, or maybe it's better to run them in paralel
+      # for paralel
+      # Pros: it will finish faster because it will run both in parallel
+      # Cons: it would be harder to follow logs in case of issue
       - name: Download and Run External Tests
+        # Use actions/checkout instead https://github.com/actions/checkout?tab=readme-ov-file#checkout-multiple-repos-side-by-side
         run: |
           git clone https://github.com/4chain-ag/spv-wallet-regression.git
           cd spv-wallet-regression
+
+          # hmmm... interesting: I don't see command for installing taskfile
+          # shouldn't you use something like this https://taskfile.dev/installation/#github-actions
+
           task regression-tests
         shell: bash
 
+      # For sure, you should also upload those files as an artifact of the job https://github.com/actions/upload-artifact?tab=readme-ov-file#upload-using-a-wildcard-pattern
       - name: Fetch Logs on Failure
         if: ${{ failure() || steps.wait_for_apps.outputs.app_status == 'unhealthy' }}
         run: |
+          # I'm affraid that you should rather use the `--name` param and load logs for each service separatelly, because I got an error when I tried to load pretty big logs of everything in a cluster (but maybe we can adjust it later)
+          
           argocd app logs reg-sl-${TEST_ID} --grpc-web > reg-sl-${TEST_ID}.log
           argocd app logs reg-pg-${TEST_ID} --grpc-web > reg-pg-${TEST_ID}.log
         shell: bash
 
       - name: Remove SQLite Instance
+        #it's worth to add here `if: always() - otherwise it won't make a cleanup on failure
         run: argocd app delete reg-sl-${TEST_ID} --yes --grpc-web
 
       - name: Remove Postgres Instance
+        #it's worth to add here `if: always() - otherwise it won't make a cleanup on failure
         run: argocd app delete reg-pg-${TEST_ID} --yes --grpc-web
