feat(SPV-894): adds functions to operator, adds changes to workflow to run tests from go-client

--- a/.github/workflows/regression-tests.yaml
+++ b/.github/workflows/regression-tests.yaml
@@ -120,10 +120,17 @@ jobs:
           sudo sh -c "$(curl --location https://taskfile.dev/install.sh)" -- -d -b /usr/local/bin
         shell: bash
 
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          repository: bitcoin-sv/spv-wallet-go-client
+          ref: feat-896-regression-tests-v1
+          path: regression_tests
+
       - name: Run External Tests
         run: |
-          cd spv-wallet-regression
-          task regression-tests
+          cd regression_tests
+          task run_regression_tests
         shell: bash
 
   fetch-logs:
