--- a/charts/spv-wallet-regression-postgres/values.yaml
+++ b/charts/spv-wallet-regression-postgres/values.yaml
@@ -18,6 +18,11 @@ spv-wallet-stack:
 
   block-headers-service:
     enabled: true
+    config:
+      db:
+        engine: sqlite
+    postgresql:
+      enabled: false
 
   spv-wallet-admin:
     enabled: false
