feat: update version of spv-wallet-stack and run BHS with sqlite

--- a/charts/spv-wallet-regression-sqlite/values.yaml
+++ b/charts/spv-wallet-regression-sqlite/values.yaml
@@ -24,6 +24,8 @@ spv-wallet-stack:
 
   block-headers-service:
     enabled: true
+    postgresql:
+      enabled: false
 
   spv-wallet-admin:
     enabled: false
