--- a/charts/spv-wallet-regression-postgres/values.yaml
+++ b/charts/spv-wallet-regression-postgres/values.yaml
@@ -20,6 +20,9 @@ spv-wallet-stack:
     enabled: true
     postgresql:
       enabled: false
+    config:
+      db:
+        engine: "sqlite"
 
   spv-wallet-admin:
     enabled: false
