--- a/charts/lets-encrypt-prod/templates/cluster-issuer.yml
+++ b/charts/lets-encrypt-prod/templates/cluster-issuer.yml
@@ -1,14 +1,14 @@
 apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
-  name: lets-encrypt
+  name: lets-encrypt-prod
 spec:
   acme:
     #todo add email address in 4chain.space domain for contact from LetsEncrypt
     server: https://acme-v02.api.letsencrypt.org/directory
     privateKeySecretRef:
       # Secret resource that will be used to store the account's private key.
-      name: lets-encrypt-private-key
+      name: lets-encrypt-prod-private-key
     # Add a single challenge solver, HTTP01
     solvers:
       - http01:
