--- a/charts/spv-wallet-regression-sqlite/values.yaml
+++ b/charts/spv-wallet-regression-sqlite/values.yaml
@@ -26,6 +26,8 @@ spv-wallet-stack:
     enabled: true
     postgresql:
       enabled: false
+    ingress:
+      enabled: false
 
   spv-wallet-admin:
     enabled: false
