feat(SPV-894): remove lets-encrypt-stage

--- a/charts/spv-wallet-regression-postgres/values.yaml
+++ b/charts/spv-wallet-regression-postgres/values.yaml
@@ -4,7 +4,7 @@ spv-wallet-stack:
     ingress:
       className: traefik
       additionalAnnotations:
-        cert-manager.io/cluster-issuer: lets-encrypt-stage
+        cert-manager.io/cluster-issuer: lets-encrypt-prod
 
   spv-wallet:
     enabled: true
