--- a/.github/workflows/regression-tests.yaml
+++ b/.github/workflows/regression-tests.yaml
@@ -47,7 +47,7 @@ jobs:
             --repo https://github.com/${{ github.repository }} \
             --path charts/spv-wallet-regression-sqlite \
             --dest-server https://kubernetes.default.svc \
-            --dest-namespace sqlite-instance \
+            --dest-namespace sqlite-instance-${TEST_ID} \
             --revision HEAD \
             --sync-policy automated \
             --upsert \
@@ -64,7 +64,7 @@ jobs:
             --repo https://github.com/${{ github.repository }} \
             --path charts/spv-wallet-regression-postgres \
             --dest-server https://kubernetes.default.svc \
-            --dest-namespace postgres-instance \
+            --dest-namespace postgres-instance-${TEST_ID} \
             --revision HEAD \
             --sync-policy automated \
             --upsert \
