feat(SPV-894): fixes isuerRef to correct name

--- a/charts/lets-encrypt-wildcard/templates/wildcard-certificate.yaml
+++ b/charts/lets-encrypt-wildcard/templates/wildcard-certificate.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   secretName: wildcard-tls
   issuerRef:
-    name: letsencrypt-cloudflare
+    name: lets-encrypt-wildcard
     kind: ClusterIssuer
   commonName: "*.regression.cleanchain.org"
   dnsNames:
