feat(SPV-894): adds namespace to cloudflare api token

--- a/charts/lets-encrypt-wildcard/templates/cluster-issuer.yml
+++ b/charts/lets-encrypt-wildcard/templates/cluster-issuer.yml
@@ -13,3 +13,4 @@ spec:
             apiTokenSecretRef:
               name: cloudflare-api-token-secret
               key: cloudflare-api-token
+              namespace: default
