--- a/charts/spv-wallet-regression-sqlite/values.yaml
+++ b/charts/spv-wallet-regression-sqlite/values.yaml
@@ -1,6 +1,7 @@
 spv-wallet-stack:
   global:
     storageClass: openebs-hostpath
+    adminkeySecret: ""
     ingress:
       className: traefik
       additionalAnnotations:
