--- a/charts/lets-encrypt-wildcard/templates/wildcard-certificate.yaml
+++ b/charts/lets-encrypt-wildcard/templates/wildcard-certificate.yaml
@@ -2,7 +2,7 @@ apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
   name: wildcard-certificate
-  namespace: traefik
+  namespace: default
 spec:
   secretName: wildcard-tls
   issuerRef:
