--- a/.github/workflows/regression-tests.yaml
+++ b/.github/workflows/regression-tests.yaml
@@ -4,11 +4,20 @@ on:
   repository_dispatch:
     types: [regression_tests]
 
+env:
+  TEST_ID: ${{ github.event.client_payload.run_id }}
+  CLIENT_ONE_URL: test-${{github.event.client_payload.run_id}}-sqlite.regression.cleanchain.org
+  CLIENT_TWO_URL: test-${{github.event.client_payload.run_id}}-postgres.regression.cleanchain.org
+  # We're setting this keys statically and publicly because
+  # they won't operate on a big amounts,
+  # and it will be easier to debug if something goes wrong
+  CLIENT_ONE_LEADER_XPRIV: xprv9s21ZrQH143K3JA1mzQpYzUX5zZYEos7hghmQAG1D8rhdhm3fQzFRp4NjFRQ2jvdkWnvstYJw3P5BhV4ytrg49MEu9m3zfkjziDTiKUcxtr
+  CLIENT_TWO_LEADER_XPRIV: xprv9s21ZrQH143K386fSgjYrNdfEUHpjUEjMckdrh6d3sv4pojsfEgVoTGybefJgr2GN6pTpu6M4Pv7VWTRQuFAw741s22eaZiomKMbLrYijBh
+
 jobs:
   preparation:
     runs-on: ubuntu-latest
     env:
-      TEST_ID: ${{ github.event.client_payload.run_id }}
       IMAGE_TAG: ${{ github.event.client_payload.image_tag }}
     outputs:
       app_status: ${{ steps.wait_for_apps.outputs.app_status }}
@@ -42,7 +51,7 @@ jobs:
 
       - name: Deploy SQLite Instance
         run: |
-          DOMAIN_NAME="test-${TEST_ID}-sqlite.regression.cleanchain.org"
+          DOMAIN_NAME="${CLIENT_ONE_URL}"
           argocd app create reg-sl-${TEST_ID} \
             --repo https://github.com/${{ github.repository }} \
             --path charts/spv-wallet-regression-sqlite \
@@ -60,7 +69,7 @@ jobs:
 
       - name: Deploy Postgres Instance
         run: |
-          DOMAIN_NAME="test-${TEST_ID}-postgres.regression.cleanchain.org"
+          DOMAIN_NAME="${CLIENT_TWO_URL}"
           argocd app create reg-pg-${TEST_ID} \
             --repo https://github.com/${{ github.repository }} \
             --path charts/spv-wallet-regression-postgres \
@@ -87,14 +96,14 @@ jobs:
             SYNC_POSTGRES=$(argocd app get reg-pg-${TEST_ID} --grpc-web -o json | jq -r '.status.sync.status')
             if [[ "$STATUS_SQLITE" == "Healthy" && "$STATUS_POSTGRES" == "Healthy" && "$SYNC_SQLITE" == "Synced" && "$SYNC_POSTGRES" == "Synced" ]]; then
               echo "Both applications are synced and healthy"
-              echo "::set-output name=app_status::healthy"
+              echo "app_status=healthy" >> $GITHUB_OUTPUT
               break
             fi
             echo "Waiting for applications to be healthy and synced..."
             sleep 120
             if [[ $i -eq 3 ]]; then
               echo "Applications did not become healthy and synced in time"
-              echo "::set-output name=app_status::unhealthy"
+              echo "app_status=unhealthy" >> $GITHUB_OUTPUT
             fi
           done
         shell: bash
@@ -116,13 +125,14 @@ jobs:
 
       - name: Run Operator
         id: run_operator
+
+        run: |
+          cd spv-wallet-regression
+          go run operator.go
+        shell: bash
         env:
           MASTER_INSTANCE_URL: ${{ secrets.MASTER_INSTANCE_URL }}
           MASTER_INSTANCE_XPRIV: ${{ secrets.MASTER_INSTANCE_XPRIV }}
-        run: |
-          cd spv-wallet-regression
-          go run operator.go test-${{ github.event.client_payload.run_id }}-sqlite.regression.cleanchain.org test-${{ github.event.client_payload.run_id }}-postgres.regression.cleanchain.org
-        shell: bash
 
       - name: Install Task
         run: |
@@ -134,12 +144,11 @@ jobs:
         with:
           repository: bitcoin-sv/spv-wallet-go-client
           ref: feat-896-regression-tests-v1
-          path: regression_tests
+          path: go-client
 
       - name: Run External Tests
         run: |
-          cd regression_tests
-          cd regression_tests
+          cd go-client/regression_tests
           task run_regression_tests
         shell: bash
 
