--- a/charts/lets-encrypt-wildcard/templates/wildcard-certificate.yaml
+++ b/charts/lets-encrypt-wildcard/templates/wildcard-certificate.yaml
@@ -8,6 +8,6 @@ spec:
   issuerRef:
     name: lets-encrypt-wildcard
     kind: ClusterIssuer
-  commonName: "*.regression.4chain.pl"
+  commonName: "*.regression.cleanchain.org"
   dnsNames:
-  - "*.regression.4chain.pl"
+  - "*.regression.cleanchain.org"
