--- a/.github/workflows/regression-tests.yaml
+++ b/.github/workflows/regression-tests.yaml
@@ -195,6 +195,12 @@ jobs:
           path: |
             reg-sl-${{ github.event.client_payload.run_id }}.log
             reg-pg-${{ github.event.client_payload.run_id }}.log
+            
+      - name: Upload Results To Determine Test Result
+        uses: actions/upload-artifact@v4
+        with:
+          name: regression-result-${{ github.event.client_payload.run_id }}
+          path: result.txt
 
   cleanup:
     runs-on: ubuntu-latest
