--- a/.github/workflows/regression-tests.yaml
+++ b/.github/workflows/regression-tests.yaml
@@ -154,6 +154,29 @@ jobs:
           CLIENT_ONE_URL: https://${{env.CLIENT_ONE_URL}}
           CLIENT_TWO_URL: https://${{env.CLIENT_TWO_URL}}
 
+  determine-status:
+    runs-on: ubuntu-latest
+    needs: [preparation, running-tests]
+    if: always()
+    steps:
+      - name: Determine Status
+        run: |
+          # Check the result of the running-tests job
+          if [[ "${{ needs.running-tests.result }}" == "failure" ]]; then
+            echo "failure" > test_status.txt
+            echo "The running-tests job has failed."
+          else
+            echo "success" > test_status.txt
+            echo "The running-tests job succeeded."
+          fi
+        shell: bash
+        
+      - name: Upload Test Status Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: regression-result-${{ github.event.client_payload.run_id }}
+          path: test_status.txt
+                  
   fetch-logs:
     runs-on: ubuntu-latest
     needs: [preparation, running-tests]
@@ -194,21 +217,6 @@ jobs:
           path: |
             reg-sl-${{ github.event.client_payload.run_id }}.log
             reg-pg-${{ github.event.client_payload.run_id }}.log
-      
-      - name: Determine Test Status
-        id: test_status
-        run: |
-          # Logic to determine test status (e.g., based on test results)
-          if [ "$tests_passed" == "true" ]; then
-            echo "status=success" >> $GITHUB_ENV
-          else
-            echo "status=failure" >> $GITHUB_ENV
-            
-      - name: Upload Results To Determine Test Result
-        uses: actions/upload-artifact@v4
-        with:
-          name: regression-result-${{ github.event.client_payload.run_id }}
-          path: result.txt
 
   cleanup:
     runs-on: ubuntu-latest
