--- a/.github/workflows/regression-tests.yaml
+++ b/.github/workflows/regression-tests.yaml
@@ -174,7 +174,7 @@ jobs:
       - name: Upload Test Status Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: regression-result-${{ github.event.client_payload.run_id }}
+          name: ${{ needs.running-tests.result }}_${{ github.run_id }}_${{ github.event.client_payload.run_id }}
           path: test_status.txt
                   
   fetch-logs:
