feat(SPV-000): swaps repo url to https

--- a/charts/argo-apps/templates/devops-definitions-mount.yaml
+++ b/charts/argo-apps/templates/devops-definitions-mount.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: git@github.com:4chain-ag/spv-wallet-regression.git
+    repoURL: https://github.com/4chain-ag/spv-wallet-regression.git
     targetRevision: HEAD
     path: devops-tools-defs
   destination:
