--- a/devops-tools-defs/lets-encrypt-prod.yml
+++ b/devops-tools-defs/lets-encrypt-prod.yml
@@ -15,6 +15,6 @@ spec:
     syncOptions:
       - CreateNamespace=true
   source:
-    repoURL: git@github.com:4chain-ag/spv-wallet-regression.git
+    repoURL: https://github.com/4chain-ag/spv-wallet-regression.git
     targetRevision: HEAD
     path: charts/lets-encrypt-prod
