--- a/.github/workflows/regression-tests.yaml
+++ b/.github/workflows/regression-tests.yaml
@@ -170,17 +170,16 @@ jobs:
             echo "The running-tests job succeeded."
           fi
         shell: bash
-        
+
       - name: Upload Test Status Artifact
         uses: actions/upload-artifact@v4
         with:
           name: ${{ needs.running-tests.result }}_${{ github.run_id }}_${{ github.event.client_payload.run_id }}
           path: test_status.txt
-                  
+
   fetch-logs:
     runs-on: ubuntu-latest
     needs: [preparation, running-tests]
-    if: ${{ failure() || needs.preparation.outputs.app_status == 'unhealthy' }}
     steps:
       - name: Cache ArgoCD CLI
         id: argocd-cache
@@ -204,7 +203,7 @@ jobs:
         run: |
           argocd login $ARGOCD_SERVER --username $ARGOCD_USERNAME --password $ARGOCD_PASSWORD --insecure --grpc-web
 
-      - name: Fetch Logs on Failure
+      - name: Fetch Logs
         run: |
           argocd app logs reg-sl-${{ github.event.client_payload.run_id }} --grpc-web > reg-sl-${{ github.event.client_payload.run_id }}.log
           argocd app logs reg-pg-${{ github.event.client_payload.run_id }} --grpc-web > reg-pg-${{ github.event.client_payload.run_id }}.log
