--- a/.github/workflows/regression-tests.yaml
+++ b/.github/workflows/regression-tests.yaml
@@ -179,7 +179,7 @@ jobs:
 
   fetch-logs:
     runs-on: ubuntu-latest
-    needs: [preparation, running-tests]
+    needs: preparation
     steps:
       - name: Cache ArgoCD CLI
         id: argocd-cache
