--- a/.github/workflows/regression-tests.yaml
+++ b/.github/workflows/regression-tests.yaml
@@ -179,7 +179,8 @@ jobs:
 
   fetch-logs:
     runs-on: ubuntu-latest
-    needs: preparation
+    needs: determine-status
+    if: always()
     steps:
       - name: Cache ArgoCD CLI
         id: argocd-cache
