--- a/.github/workflows/regression-tests.yaml
+++ b/.github/workflows/regression-tests.yaml
@@ -13,6 +13,8 @@ env:
   # and it will be easier to debug if something goes wrong
   CLIENT_ONE_LEADER_XPRIV: xprv9s21ZrQH143K3JA1mzQpYzUX5zZYEos7hghmQAG1D8rhdhm3fQzFRp4NjFRQ2jvdkWnvstYJw3P5BhV4ytrg49MEu9m3zfkjziDTiKUcxtr
   CLIENT_TWO_LEADER_XPRIV: xprv9s21ZrQH143K386fSgjYrNdfEUHpjUEjMckdrh6d3sv4pojsfEgVoTGybefJgr2GN6pTpu6M4Pv7VWTRQuFAw741s22eaZiomKMbLrYijBh
+  BLOCK_HEADER_SERVICE_URL: ${{ secrets.BLOCK_HEADER_SERVICE_URL }}
+  AUTH_TOKEN: ${{ secrets.BLOCK_HEADER_SERVICE_AUTH_TOKEN }}
 
 jobs:
   preparation:
@@ -65,6 +67,8 @@ jobs:
             --helm-set global.domainName=${DOMAIN_NAME} \
             --helm-set spv-wallet-stack.spv-wallet.image.tag=${{ env.IMAGE_TAG }} \
             --helm-set spv-wallet-stack.spv-wallet.image.repository=bsvb/spv-wallet
+            --helm-set spv-wallet-stack.spv-wallet.config.paymail.beef.block_headers_service_url=${{ env.BLOCK_HEADERS_SERVICE_URL }} \
+            --helm-set spv-wallet-stack.spv-wallet.config.paymail.beef.block_headers_service_auth_token=${{ env.BLOCK_HEADERS_SERVICE_AUTH_TOKEN }}
         shell: bash
 
       - name: Deploy Postgres Instance
@@ -83,6 +87,8 @@ jobs:
             --helm-set global.domainName=${DOMAIN_NAME} \
             --helm-set spv-wallet-stack.spv-wallet.image.tag=${{ env.IMAGE_TAG }} \
             --helm-set spv-wallet-stack.spv-wallet.image.repository=bsvb/spv-wallet
+            --helm-set spv-wallet-stack.spv-wallet.config.paymail.beef.block_headers_service_url=${{ env.BLOCK_HEADERS_SERVICE_URL }} \
+            --helm-set spv-wallet-stack.spv-wallet.config.paymail.beef.block_headers_service_auth_token=${{ env.BLOCK_HEADERS_SERVICE_AUTH_TOKEN }}
         shell: bash
 
       - name: Wait for Applications to be Healthy
