--- a/.github/workflows/regression-tests.yaml
+++ b/.github/workflows/regression-tests.yaml
@@ -66,7 +66,7 @@ jobs:
             --grpc-web \
             --helm-set global.domainName=${DOMAIN_NAME} \
             --helm-set spv-wallet-stack.spv-wallet.image.tag=${{ env.IMAGE_TAG }} \
-            --helm-set spv-wallet-stack.spv-wallet.image.repository=bsvb/spv-wallet
+            --helm-set spv-wallet-stack.spv-wallet.image.repository=bsvb/spv-wallet \
             --helm-set spv-wallet-stack.spv-wallet.config.paymail.beef.block_headers_service_url=${{ env.BLOCK_HEADERS_SERVICE_URL }} \
             --helm-set spv-wallet-stack.spv-wallet.config.paymail.beef.block_headers_service_auth_token=${{ env.BLOCK_HEADERS_SERVICE_AUTH_TOKEN }}
         shell: bash
@@ -86,7 +86,7 @@ jobs:
             --grpc-web \
             --helm-set global.domainName=${DOMAIN_NAME} \
             --helm-set spv-wallet-stack.spv-wallet.image.tag=${{ env.IMAGE_TAG }} \
-            --helm-set spv-wallet-stack.spv-wallet.image.repository=bsvb/spv-wallet
+            --helm-set spv-wallet-stack.spv-wallet.image.repository=bsvb/spv-wallet \
             --helm-set spv-wallet-stack.spv-wallet.config.paymail.beef.block_headers_service_url=${{ env.BLOCK_HEADERS_SERVICE_URL }} \
             --helm-set spv-wallet-stack.spv-wallet.config.paymail.beef.block_headers_service_auth_token=${{ env.BLOCK_HEADERS_SERVICE_AUTH_TOKEN }}
         shell: bash
