--- a/.github/workflows/regression-tests.yaml
+++ b/.github/workflows/regression-tests.yaml
@@ -68,7 +68,9 @@ jobs:
             --helm-set spv-wallet-stack.spv-wallet.image.tag=${{ env.IMAGE_TAG }} \
             --helm-set spv-wallet-stack.spv-wallet.image.repository=bsvb/spv-wallet \
             --helm-set spv-wallet-stack.spv-wallet.config.block_headers_service.url=${{ env.BLOCK_HEADERS_SERVICE_URL }} \
-            --helm-set spv-wallet-stack.spv-wallet.config.block_headers_service.auth_token=${{ env.BLOCK_HEADERS_SERVICE_AUTH_TOKEN }}
+            --helm-set spv-wallet-stack.spv-wallet.config.block_headers_service.auth_token=${{ env.BLOCK_HEADERS_SERVICE_AUTH_TOKEN }} \
+            --helm-set spv-wallet-stack.spv-wallet.config.paymail.beef.block_headers_service_url=${{ env.BLOCK_HEADERS_SERVICE_URL }}/api/v1/chain/merkleroot/verify \
+            --helm-set spv-wallet-stack.spv-wallet.config.paymail.beef.block_headers_service_auth_token=${{ env.BLOCK_HEADERS_SERVICE_AUTH_TOKEN }}
         shell: bash
 
       - name: Deploy Postgres Instance
@@ -88,7 +90,9 @@ jobs:
             --helm-set spv-wallet-stack.spv-wallet.image.tag=${{ env.IMAGE_TAG }} \
             --helm-set spv-wallet-stack.spv-wallet.image.repository=bsvb/spv-wallet \
             --helm-set spv-wallet-stack.spv-wallet.config.block_headers_service.url=${{ env.BLOCK_HEADERS_SERVICE_URL }} \
-            --helm-set spv-wallet-stack.spv-wallet.config.block_headers_service.auth_token=${{ env.BLOCK_HEADERS_SERVICE_AUTH_TOKEN }}
+            --helm-set spv-wallet-stack.spv-wallet.config.block_headers_service.auth_token=${{ env.BLOCK_HEADERS_SERVICE_AUTH_TOKEN }} \
+            --helm-set spv-wallet-stack.spv-wallet.config.paymail.beef.block_headers_service_url=${{ env.BLOCK_HEADERS_SERVICE_URL }}/api/v1/chain/merkleroot/verify \
+            --helm-set spv-wallet-stack.spv-wallet.config.paymail.beef.block_headers_service_auth_token=${{ env.BLOCK_HEADERS_SERVICE_AUTH_TOKEN }}
         shell: bash
 
       - name: Wait for Applications to be Healthy
