--- a/.github/workflows/regression-tests.yaml
+++ b/.github/workflows/regression-tests.yaml
@@ -256,7 +256,7 @@ jobs:
   cleanup:
     runs-on: ubuntu-latest
     needs: [preparation, running-tests, fetch-logs]
-    if: always()
+    if: success()
     steps:
       - name: Cache ArgoCD CLI
         id: argocd-cache
