--- a/.github/workflows/test_on_push.yaml
+++ b/.github/workflows/test_on_push.yaml
@@ -2,7 +2,7 @@ name: 'Test changes in this repository'
 
 on:
   workflow_dispatch:
-  pull_request_target:
+  pull_request:
     types: [labeled]
 
 jobs:
