--- a/.github/workflows/test_on_push.yaml
+++ b/.github/workflows/test_on_push.yaml
@@ -5,9 +5,6 @@ on:
   pull_request_target:
     types: [labeled]
 
-env:
-  TEST_ID: t${{ github.run_id }}-${{ github.run_attempt }}
-
 jobs:
   test:
     if: >
@@ -16,7 +13,7 @@ jobs:
     uses: ./.github/workflows/run-regression-tests.yaml
     with:
       image_tag: 'latest'
-      run_id: ${{ env.TEST_ID }}
+      run_id: 't${{ github.run_id }}-${{ github.run_attempt }}'
       keep_instances: 'failure'
     secrets:
       MASTER_INSTANCE_URL: ${{ secrets.MASTER_INSTANCE_URL }}
