--- a/.github/workflows/test_on_push.yaml
+++ b/.github/workflows/test_on_push.yaml
@@ -1,12 +1,9 @@
-name: 'Test regression test flow changes'
+name: 'Test changes in this repository'
 
 on:
   workflow_dispatch:
-  pull_request_target:
+  pull_request:
     types: [labeled]
-
-env:
-  TEST_ID: t${{ github.run_id }}-${{ github.run_attempt }}
 
 jobs:
   test:
@@ -16,7 +13,7 @@ jobs:
     uses: ./.github/workflows/run-regression-tests.yaml
     with:
       image_tag: 'latest'
-      run_id: ${{ env.TEST_ID }}
+      run_id: 't${{ github.run_id }}-${{ github.run_attempt }}'
       keep_instances: 'failure'
     secrets:
       MASTER_INSTANCE_URL: ${{ secrets.MASTER_INSTANCE_URL }}
