--- a/.github/workflows/test_on_push.yaml
+++ b/.github/workflows/test_on_push.yaml
@@ -2,6 +2,17 @@ name: 'Test changes in this repository'
 
 on:
   workflow_dispatch:
+    inputs:
+      keep_instances:
+        description: 'When should it keep instances created during tests?'
+        required: true
+        default: 'never'
+        type: choice
+        options:
+          - 'always'
+          - 'failure'
+          - 'never'
+
   pull_request:
     types: [labeled]
 
@@ -9,12 +20,12 @@ jobs:
   test:
     if: >
       (github.event_name == 'workflow_dispatch') ||
-      (github.event_name == 'pull_request_target' && github.event.label.name == 'regression-tests')
+      (github.event_name == 'pull_request' && github.event.label.name == 'regression-tests')
     uses: ./.github/workflows/run-regression-tests.yaml
     with:
       image_tag: 'latest'
       run_id: 't${{ github.run_id }}-${{ github.run_attempt }}'
-      keep_instances: 'failure'
+      keep_instances: 'never'
     secrets:
       MASTER_INSTANCE_URL: ${{ secrets.MASTER_INSTANCE_URL }}
       MASTER_INSTANCE_XPRIV: ${{ secrets.MASTER_INSTANCE_XPRIV }}
