--- a/.github/workflows/test_on_push.yaml
+++ b/.github/workflows/test_on_push.yaml
@@ -25,7 +25,7 @@ jobs:
     with:
       image_tag: 'latest'
       run_id: 't${{ github.run_id }}-${{ github.run_attempt }}'
-      keep_instances: 'never'
+      keep_instances: ${{ inputs.keep_instances }}
     secrets:
       MASTER_INSTANCE_URL: ${{ secrets.MASTER_INSTANCE_URL }}
       MASTER_INSTANCE_XPRIV: ${{ secrets.MASTER_INSTANCE_XPRIV }}
